--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <title>Moovie.js | Movie Focused HTML5 Player</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="demo-template/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
 
   <!-- Moovie CSS Style -->
-  <link rel="stylesheet" type="text/css" href="css/moovie.css">
+  <link rel="stylesheet" type="text/css" href="moovie.css">
 
   <!-- GFonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -47,7 +47,7 @@
     </div>
   </div>
   <!-- Moovie JS Core -->
-  <script src="js/moovie.js"></script>
+  <script src="moovie.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
             var demo1 = new Moovie({
